Footer Section Completed

--- a/index.html
+++ b/index.html
@@ -438,7 +438,15 @@
     </main>
 
 
-      <footer class="footer footer-center bg-base-200 text-base-content rounded p-10">
+      <footer class="footer footer-center bg-black text-white rounded p-10">
+
+        <nav>
+           <div class="flex justify-center items-center gap-4">
+            <img src="images/logo.png" alt=""> 
+           <span class="text-white ">Fruit Burst</span>
+           </div>
+        </nav>
+
         <nav class="grid grid-flow-col gap-4">
           <a class="link link-hover">About us</a>
           <a class="link link-hover">Contact</a>
@@ -483,7 +491,7 @@
           </div>
         </nav>
         <aside>
-          <p>Copyright © {new Date().getFullYear()} - All right reserved by ACME Industries Ltd</p>
+          <p>Copyright © Fruit Burst</p>
         </aside>
       </footer>
 
