--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
     Get in Touch Anytime
   </h3>
   
-  <div class="grid grid-cols-1 gap-10 lg:grid-cols-3 lg:gap-16">
+  <div class="grid grid-cols-1 gap-10 lg:grid-cols-3 justify-center items-center lg:gap-16">
     <!-- Form Column -->
     <div class="col-span-2 bg-white p-8 rounded-lg shadow-lg">
       <div class="grid gap-6 grid-cols-1 lg:grid-cols-2">
@@ -536,7 +536,7 @@
     </div>
 
     <!-- Info Column -->
-    <div class="space-y-8">
+    <div class="space-y-8 flex justify-center items-center flex-col">
       <!-- Info Block 1 -->
       <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
         <div class="w-20 h-20 rounded-full bg-primary text-white flex items-center justify-center mb-4">
