--- a/index.html
+++ b/index.html
@@ -500,10 +500,11 @@
     Get in Touch Anytime
   </h3>
   
-  <div class="grid grid-cols-1 gap-10 lg:grid-cols-3 justify-center items-center lg:gap-16">
+  <div class="grid grid-cols-1 gap-10 md:grid-cols-1 lg:grid-cols-3 justify-center items-center lg:gap-16">
+
     <!-- Form Column -->
     <div class="col-span-2 bg-white p-8 rounded-lg shadow-lg">
-      <div class="grid gap-6 grid-cols-1 lg:grid-cols-2">
+      <div class="grid gap-6 grid-cols-1 md:grid-cols-1 lg:grid-cols-2">
         <div>
           <label for="name" class="block font-semibold text-gray-700">First Name</label>
           <input type="text" id="name" placeholder="Enter First Name" class="mt-2 input input-bordered w-full p-3 border-gray-300 rounded-md focus:border-primary focus:ring-primary" />
@@ -536,9 +537,10 @@
     </div>
 
     <!-- Info Column -->
-    <div class="space-y-8 flex justify-center items-center flex-col">
+    <div class="space-y-8 flex justify-center items-center flex-col mx-auto">
+
       <!-- Info Block 1 -->
-      <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+      <div class="bg-white p-6 flex-1  rounded-lg shadow-md flex flex-col items-center text-center">
         <div class="w-20 h-20 rounded-full bg-primary text-white flex items-center justify-center mb-4">
           <i class="fa-solid fa-phone fa-2x"></i>
         </div>
@@ -547,7 +549,7 @@
       </div>
       
       <!-- Info Block 2 -->
-      <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+      <div class="bg-white p-6 flex-1 rounded-lg shadow-md flex flex-col items-center text-center">
         <div class="w-20 h-20 rounded-full bg-primary text-white flex items-center justify-center mb-4">
           <i class="fa-solid fa-envelope fa-2x"></i>
         </div>
@@ -556,7 +558,7 @@
       </div>
 
       <!-- Info Block 3 -->
-      <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
+      <div class="bg-white p-6 flex-1 rounded-lg shadow-md flex flex-col items-center text-center">
         <div class="w-20 h-20 rounded-full bg-primary text-white flex items-center justify-center mb-4">
           <i class="fa-solid fa-location-dot fa-2x"></i>
         </div>
