slider changes added for small devices

--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
  </header>
 
 
-    <main class="max-w-[1440px] p-4 md:p-7 md:w-[80%] mx-auto">
+    <main class="max-w-[1440px] p-4 md:p-7 md:w-[97%] mx-auto">
      
-      <div class="p-4 ">
+      <div class="">
         <div class="carousel w-full rounded-lg ">
           <div id="slide1" class="carousel-item relative w-full h-[60vh] bg-cover bg-center bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner1.png)] flex items-center justify-center">
             <div class="flex justify-center flex-col space-y-5">
               <h1 class="md:text-5xl text-3xl text-white font-bold text-center">A Journey of Exotic Flavors</h1>
-              <p class="text-white w-2/3 mx-auto text-center">Savor unique tastes from around the world, delivered fresh to your door.</p>
+              <p class="text-white w-2/3 mx-auto text-center p-4">Savor unique tastes from around the world, delivered fresh to your door.</p>
               <button class="bg-btn-color rounded block mx-auto px-3 py-2 text-white font-bold border-none">
                 Explore Now
               </button>
@@ -139,7 +139,7 @@
           <div id="slide2" class="carousel-item relative w-full h-[60vh] bg-cover bg-center bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner2.png)] flex items-center justify-center">
             <div class="flex justify-center flex-col space-y-5">
               <h1 class="md:text-5xl text-3xl text-white font-bold text-center">Fresh Delights Await You</h1>
-              <p class="text-white w-2/3 mx-auto text-center">Indulge in fresh, vibrant flavors that bring a world of taste to your table.</p>
+              <p class="text-white w-2/3 mx-auto text-center p-4">Indulge in fresh, vibrant flavors that bring a world of taste to your table.</p>
               <button class="bg-btn-color rounded block mx-auto px-3 py-2 text-white font-bold border-none">
                 Shop Fresh
               </button>
@@ -153,7 +153,7 @@
           <div id="slide3" class="carousel-item relative w-full h-[60vh] bg-cover bg-center bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner3.png)] flex items-center justify-center">
             <div class="flex justify-center flex-col space-y-5">
               <h1 class="md:text-5xl text-3xl text-white font-bold text-center">Elevate Your Culinary Experience</h1>
-              <p class="text-white w-2/3 mx-auto text-center">From kitchen to table, let our selections elevate your meals to new heights.</p>
+              <p class="text-white w-2/3 mx-auto text-center p-4">From kitchen to table, let our selections elevate your meals to new heights.</p>
               <button class="bg-btn-color rounded block mx-auto px-3 py-2 text-white font-bold border-none">
                 Discover More
               </button>
@@ -167,7 +167,7 @@
           <div id="slide4" class="carousel-item relative w-full h-[60vh] bg-cover bg-center bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner4.png)] flex items-center justify-center">
             <div class="flex justify-center flex-col space-y-5">
               <h1 class="md:text-5xl text-3xl text-white font-bold text-center">Taste the Adventure</h1>
-              <p class="text-white w-2/3 mx-auto text-center">Unleash your taste buds with vibrant flavors from around the globe.</p>
+              <p class="text-white w-2/3 mx-auto text-center p-4">Unleash your taste buds with vibrant flavors from around the globe.</p>
               <button class="bg-btn-color rounded block mx-auto px-3 py-2 text-white font-bold border-none">
                 Taste Now
               </button>
@@ -235,7 +235,7 @@
 
       <section class="my-12">
           <!-- Parent div -->
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  ">
+          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4  ">
             <div class="card w-full shadow-lg">
               <figure class="px-10 pt-10">
                 <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
@@ -537,7 +537,7 @@
     </div>
 
     <!-- Info Column -->
-    <div class="space-y-8 flex justify-center items-center flex-col mx-auto">
+    <div class="space-y-8 col-span-1 flex justify-center items-center flex-col mx-auto">
 
       <!-- Info Block 1 -->
       <div class="bg-white p-6 flex-1  rounded-lg shadow-md flex flex-col items-center text-center">
